--- a/src/assets/scss/includes/_table.scss
+++ b/src/assets/scss/includes/_table.scss
@@ -16,3 +16,48 @@ $color_celeste_approx: #ccc;
 		transition: 0.5s;
 	}
 }
+
+
+@media only screen and (max-width: 800px) {
+	/* Force table to not be like tables anymore */
+	#no-more-tables {
+	  table, thead, tbody, th, td, tr {
+		display: block;
+		word-break: break-all;
+	  }
+	  thead tr {
+		position: absolute;
+		top: -9999px;
+	  }
+	  tr {
+		border: 1px solid #ccc;
+	  }
+	  td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+		white-space: normal;
+		text-align: left;
+		&:before {
+		  /* Now like a table header */
+		  position: absolute;
+		  /* Top/left values mimic padding */
+		  top: 6px;
+		  left: 6px;
+		  width: 45%;
+		  padding-right: 10px;
+		  white-space: nowrap;
+		  text-align: left;
+		  font-weight: bold;
+		  content: attr(data-title);
+          
+		}
+	  }
+	}
+	/* Hide table headers (but not display: none;, for accessibility) */
+	/*
+	Label the data
+	*/
+  }
