--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -17,40 +17,47 @@ html(lang="en")
         script(src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js")
         script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
         <![endif]-->
-        script(src="js/table.js")
         script(src="js/knockout-3.5.0.js")
+        script(src="js/table.js")
         style(type='text/css').
            .page-main {
                 padding: 20px;
             }
     body
-#no-more-tables
-  .row
-    .col-md-1
-    table.col-md-10.col-md-offset.custyle.table-bordered.table-striped.table-condensed.cf#contributorsTable
-      thead.cf
-        tr
-          th(data-title="ID") ID
-          th(data-title="login") login
-            select(onchange = "sortTable(this.value)")
-              option(value = "ASC") ASC
-              option(value = "DESC") DESC
-          th(data-title="url") url
-          th(data-title="contributions") contributions
-          th(data-title="Group")
-              select(onchange = "selectGroup(this.value)")
-                option(value = "All") All
-                option(value = "Bronze") Bronze
-                option(value = "Silver") Silver
-                option(value = "Gold") Gold 
-      tbody(data-bind="foreach: contributors")
-        tr.line(style="cursor: grab;" data-toggle="modal"  data-bind="attr: { 'data-target' : '#'+id  }")
-          td#0(data-bind="text: id" data-title="ID") 
-          td(data-bind="text: login" data-title="login") 
-          td(data-title="url")
-            p( data-bind="text: url" ) 
-          td(data-title="contributions" data-bind="text: contributions") 
-          td.Group(data-title="group" value="Gold" data-bind="text: (contributions > Gold) ? 'Gold' : (contributions > Silver) ? 'Silver' : 'Bronze'") Gold
+      #no-more-tables
+        .row
+          .col-md-1
+          table.col-md-10.col-md-offset.custyle.table-bordered.table-striped.table-condensed.cf#contributorsTable
+            thead.cf
+              tr
+                th(data-title="ID") ID
+                th(data-title="login") login
+                  select(onchange = "sortTable(this.value)")
+                    option(value = "ASC") ASC
+                    option(value = "DESC") DESC
+                th(data-title="url") url
+                th(data-title="contributions") contributions
+                th(data-title="Group")
+                    select(onchange = "selectGroup(this.value)")
+                      option(value = "All") All
+                      option(value = "Bronze") Bronze
+                      option(value = "Silver") Silver
+                      option(value = "Gold") Gold 
+            tbody(data-bind="foreach: contributors")
+              tr.line(style="cursor: grab;" data-toggle="modal"  data-bind="attr: { 'data-target' : '#'+id  }")
+                td#0(data-bind="text: id" data-title="ID") 
+                td(data-bind="text: login" data-title="login") 
+                td(data-title="url")
+                  p( data-bind="text: url" ) 
+                td(data-title="contributions" data-bind="text: contributions") 
+                td.Group(data-title="group" value="Gold" data-bind="text: (contributions > Gold) ? 'Gold' : (contributions > Silver) ? 'Silver' : 'Bronze'") Gold
+modals(data-bind="foreach: modals")
+  .modal.fade(tabindex='-1' role='dialog' aria-labelledby='mySmallModalLabel' aria-hidden='true'  data-bind="attr: { id : id }")
+    .modal-dialog.modal-sm
+      .modal-content
+        img(data-bind="attr: { src : avatar_url }" width='100%')
+        .col(data-bind="text: 'Company - ' + company") 
+        .col(data-bind="text: 'Location - ' + location") 
+        .col(data-bind="text: 'Email - ' + email") 
 
                 
-
